--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "rust-todo-app"
-version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+name = "todo"
+version = "0.1.0"
 
 [dependencies]
+clap = {version = "4.0", features = ["derive"]}
