--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0"
 clap = {version = "4.0", features = ["derive"]}
+
+[dev-dependencies]
+assert_cmd = "2.0.7"
+predicates = "2.1.5"
